src/test/ui/enum-discriminant/issue-70453-polymorphic-ctfe.stderr
error: generic parameters may not be used in const operations
  --> $DIR/issue-70453-polymorphic-ctfe.rs:9:41
   |
LL |     Some(T) = core::mem::size_of::<*mut T>(),
   |                                         ^ cannot perform const operation using `T`
   |
   = note: type parameters may not be used in const expressions
   = help: use `#![feature(generic_const_exprs)]` to allow generic const expressions

error: aborting due to previous error

